DXP-1086: Layout Issue: lg-flex class with "alignment-items:center" property -Commented  "alignment-items:center" property from .lg-flex class.

--- a/front-end/Assets/src/css/modules/_utility-responsive.scss
+++ b/front-end/Assets/src/css/modules/_utility-responsive.scss
@@ -395,7 +395,7 @@
 		width: 100%;
 	}
 	.lg-flex {
-		align-items: center;
+		//align-items: center; DXP-1086 - Commented align-items center
 		display: -webkit-box;
 		display: -webkit-flex;
 		display: -ms-flexbox;
